@@ -53,6 +53,7 @@ on 'configure' => sub {
 on 'develop' => sub {
   requires "Code::TidyAll::Plugin::SortLines::Naturally" => "0";
   requires "Code::TidyAll::Plugin::Test::Vars" => "0.02";
+  requires "Code::TidyAll::Plugin::UniqueLines" => "0";
   requires "File::Spec" => "0";
   requires "IO::Handle" => "0";
   requires "IPC::Open3" => "0";
