@@ -21,3 +21,4 @@ prefix = maxmind-db
 
 [Prereqs / DevelopRequires]
 Code::TidyAll::Plugin::SortLines::Naturally = 0
+Code::TidyAll::Plugin::UniqueLines = 0
